:bug: :art: make the items of the DM menu correctly visible in minimal+dark mode

--- a/src/css/theme-dark.css
+++ b/src/css/theme-dark.css
@@ -25,8 +25,9 @@
 
   .dropdown-menu li > a,
   .dropdown-menu li > b,
+  .js-typeahead-dropdown :matches(.fullname, .username, p),
   .typeahead.lst :matches(.fullname, .username, p) {
-    color: color(#8899a6 saturation(0%)) !important;
+    color: #969696 !important;
   }
 
   .typeahead.lst :matches(.fullname, .username, p) {
